[package]
name = "port-check"
version = "0.1.0"
edition = "2024"
authors = ["Steve Roques <steve.roques@gmail.com>"]
description = "Check what process is using a port"
license = "MIT"
repository = "https://github.com/roquess/port-check"
readme = "README.md"
keywords = ["port", "network", "cli", "debugging"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "pc"
path = "src/main.rs"

[dependencies]
loki_weave = "0.1"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
colored = "3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Threading",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
